--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.2.0",
-    "mongoose": "^8.0.1"
+    "mongoose": "^8.0.1",
+    "stripe": "^17.2.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
